<resources>
    <string name="app_name">Chat\'T</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">LogIn to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="restore_password">Restore Password</string>
    <string name="match_password">Password\'s does not match</string>
    <string name="used_username">This username already used</string>
    <string name="used_email">This email already used</string>
    <string name="short_username">Username is short</string>
    <string name="poor_password">Password is poor</string>
    <string name="unknown_email">This is unknown email</string>
    <string name="wrong_password">Wrong password</string>
    <string name="fair_password">Password is fair</string>
    <string name="create_new_account">Create new account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="online">Online</string>"
    <string name="offline">Offline</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search_users">Search Users</string>
    <string name="select_user">Select User</string>
    <string name="message">Message...</string>
    <string name="error">Error</string>
    <string name="please_rotate_your_device">Please rotate your device</string>
    <string name="check_connection">Please check your internet Connection!</string>
    <string name="file">File</string>
</resources>