<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="355dp"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:screenOrientation="portrait"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".activities.SignInActivity">

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/create_new_account"
                android:textColor="@color/primary_text"
                android:textSize="19sp"
                android:textStyle="bold"/>

            <FrameLayout
                android:id="@+id/layoutImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/background_input"
                    android:scaleType="centerCrop"
                    app:riv_oval="true"
                    app:riv_corner_radius="31dp"/>

                <TextView
                    android:id="@+id/textAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_image"
                    android:textColor="@color/primary_text"
                    android:textSize="11sp"/>

            </FrameLayout>

            <TextView
                android:id="@+id/textUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:layout_marginTop="7dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

            <EditText
                android:id="@+id/inputUserName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_input"
                android:hint="@string/username"
                android:textColorHint="@color/primary_text"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/primary_text"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:layout_marginTop="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_input"
                android:hint="@string/email"
                android:textColorHint="@color/primary_text"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/primary_text"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:layout_marginTop="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_input"
                android:hint="@string/password"
                android:textColorHint="@color/primary_text"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/primary_text"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/textConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:layout_marginTop="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

            <EditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_input"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/primary_text"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/primary_text"
                android:textSize="11sp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>


            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_in"
                android:textColor="@color/primary"
                android:textSize="11sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>